--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<BorderPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" onAction="#oneButton" text="one" />
-                <Button mnemonicParsing="false" onAction="#twoButton" text="two" />
+                <Button mnemonicParsing="false" onAction="#oneButton" text="Send message" />
+                <Button mnemonicParsing="false" onAction="#twoButton" text="Start" />
                 <Button mnemonicParsing="false" onAction="#threeButton" text="three" />
                 <Button mnemonicParsing="false" onAction="#fourBotton" text="four" />
             </buttons>
@@ -56,6 +48,6 @@
         </Label>
     </top>
     <center>
-        <Canvas fx:id="Canvas" height="299.0" width="372.0" BorderPane.alignment="CENTER" />
+        <Canvas fx:id="canvas" height="299.0" width="372.0" BorderPane.alignment="CENTER" />
     </center>
 </BorderPane>
